--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,17 @@
-Package: spatiotempDQN
+\Package: spatiotempDQN
 Type: Package
-Title: Spatio-Temporal Deep Q-Learning with CNN-LSTM
+Title: Spatio-Temporal CNN-LSTM DQN Toolkit for Multivariate Rewards and Clustering
 Version: 0.1.0
-Author: JongMin Kim
-Maintainer: JongMin Kim <>
-Description: Tools for simulating spatio-temporal data, training CNN-LSTM based DQN models, and evaluating policies using IPS.
+Authors@R: person(
+    given = "JongMin",
+    family = "Kim",
+    email = "kjonomi@gmail.com",
+    role = c("aut", "cre")
+)
+Maintainer: Jong-Min Kim <kjonomi@gmail.com>
+Description: Utilities to simulate spatio-temporal data, build CNN-LSTM DQN models using keras, 
+    train with optional uncertainty-weighted sampling, evaluate off-policy with IPS, 
+    and run clustering and visualizations of CATE-like contrasts.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
@@ -12,14 +19,18 @@ RoxygenNote: 7.2.3
 Imports:
     keras,
     tensorflow,
+    mclust,
+    factoextra,
+    cluster,
+    dplyr,
+    ggplot2,
     nnet,
-    stats,
-    utils,
-    methods
+    nycflights13,
+    tidyr,
+    lubridate,
+    purrr,
+    stringr
 Suggests:
     testthat,
-    devtools,
-    roxygen2,
-    rmarkdown,
-    knitr
-VignetteBuilder: knitr
+    devtools
+
