--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,11 @@
-\Package: spatiotempDQN
+Package: spatiotempDQN
 Type: Package
 Title: Spatio-Temporal CNN-LSTM DQN Toolkit for Multivariate Rewards and Clustering
 Version: 0.1.0
-Authors@R: person(
-    given = "JongMin",
-    family = "Kim",
-    email = "kjonomi@gmail.com",
-    role = c("aut", "cre")
-)
+Authors@R: person(given = "Jong-Min", family = "Kim", email = "kjonomi@gmail.com", role = c("aut", "cre"))
 Maintainer: Jong-Min Kim <kjonomi@gmail.com>
-Description: Utilities to simulate spatio-temporal data, build CNN-LSTM DQN models using keras, 
-    train with optional uncertainty-weighted sampling, evaluate off-policy with IPS, 
+Description: Utilities to simulate spatio-temporal data, build CNN-LSTM DQN models using keras,
+    train with optional uncertainty-weighted sampling, evaluate off-policy with IPS,
     and run clustering and visualizations of CATE-like contrasts.
 License: MIT + file LICENSE
 Encoding: UTF-8
@@ -33,4 +28,3 @@ Imports:
 Suggests:
     testthat,
     devtools
-
