--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,23 +1,45 @@
 Package: spatiotempDQN
 Type: Package
-Title: Spatio-Temporal Deep Q-Network for Multi-Agent Environments
+Title: Offline Fitted Q-Evaluation with Temporal CNN–LSTM and CATE Clustering
 Version: 0.1.0
 Authors@R: 
-    person("Jong-Min", "Kim", email = "kjonomi@example.com", role = c("aut", "cre"))
-Description: Implements a modular deep Q-learning framework for spatio-temporal synthetic data and real datasets (e.g., NYC Flights) with temporal + spatial features. Includes CNN-LSTM DQN building, weighted sampling, and CATE analysis.
+    person("Jong-Min", "Kim",
+           email = "kjonomi@gmail.com",
+           role = c("aut", "cre"))
+Description: Implements Offline Fitted Q-Evaluation (FQE) using a 
+    temporal CNN–LSTM architecture with spatial graph feature aggregation 
+    and Conditional Average Treatment Effect (CATE) clustering. 
+    The framework supports multi-action, multi-reward reinforcement 
+    learning under observational policies and includes simulation 
+    modules and real-data applications (e.g., NYC Flights). 
+    Provides off-policy evaluation via importance sampling, 
+    bootstrap confidence intervals for CATEs, and heterogeneity 
+    analysis via k-means clustering and PCA visualization.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.3.2
-Imports: 
-    dplyr,
-    tidyr,
-    lubridate,
+Depends: 
+    R (>= 4.1.0)
+Imports:
     keras,
     tensorflow,
-    nycflights13,
-    stats
-Suggests:
+    mclust,
+    cluster,
+    factoextra,
+    dplyr,
+    ggplot2,
+    tidyr,
+    purrr,
+    stringr,
+    nnet,
     knitr,
-    rmarkdown,
-    testthat
+    nycflights13,
+    lubridate
+Suggests:
+    kableExtra,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.1
+URL: https://github.com/yourusername/spatiotempDQN
+BugReports: https://github.com/yourusername/spatiotempDQN/issues
